fixed the spacing issue and improved grid view

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 /*
  * @Author: David M. Rojas Gonzalez // davidr.info 
  * @Date: 2019-02-05 17:53:14 
- * @Last Modified by: David M. Rojas Gonzalez // deznorth.com
- * @Last Modified time: 2019-02-19 13:14:54
+ * @Last Modified by: David M. Rojas Gonzalez // davidr.info
+ * @Last Modified time: 2019-03-18 19:32:25
  */
 
 @import './colors';
@@ -35,8 +35,19 @@ hr{
 }
 
 #ContentWrapper{
-  width: 90%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-rows: minmax(1.5rem, auto);
+  grid-gap: 1rem;
+  margin: 2rem;
+
+  @media (max-width: $brk-lg){
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (max-width: $brk-md){
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (max-width: $brk-sm){
+    grid-template-columns: 1fr;
+  }
 }
