--- a/src/_dimensions.scss
+++ b/src/_dimensions.scss
@@ -2,6 +2,10 @@
  * @Author: David M. Rojas Gonzalez // davidr.info 
  * @Date: 2019-02-05 17:53:12 
  * @Last Modified by: David M. Rojas Gonzalez // davidr.info
- * @Last Modified time: 2019-02-05 17:53:55
+ * @Last Modified time: 2019-03-18 19:31:17
 */
 
+// Screen Break points
+$brk-lg: 1400px;
+$brk-md: 900px;
+$brk-sm: 600px;
