--- a/src/components/DisplayCard/DisplayCard.scss
+++ b/src/components/DisplayCard/DisplayCard.scss
@@ -1,24 +1,26 @@
 /*
  * @Author: David M. Rojas Gonzalez // deznorth.com 
  * @Date: 2019-02-19 13:05:47 
- * @Last Modified by: David M. Rojas Gonzalez // deznorth.com
- * @Last Modified time: 2019-02-19 13:39:43
+ * @Last Modified by: David M. Rojas Gonzalez // davidr.info
+ * @Last Modified time: 2019-03-18 19:19:24
 */
 @import '../../colors';
 
 .displayCard{
     display: inline-block;
-    width: 250px;
     background-color: darken($color-bg-primary, 5);
-    padding: 1rem .2rem;
+    padding: 1rem;
     margin: .5rem 0;
     border-radius: 8px;
+    box-shadow: 3px 4px 5px rgba(0,0,0,0.3);
 
     div{
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         justify-content: center;
-        text-align: center;
+        text-align: left;
+        text-transform: capitalize;
+        color: lighten($color-primary, 10);
         height: 100%;
         width: 100%;
         img{ 
